# pyharmonytooling

./: .gitignore  C chord - possible_fingerings.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  unit_test_report.md
.github/workflows/: python-package.yml
pyharmonytools/: D - possible_fingerings.txt  chord_sequence_search.py  generate_possible_chords.py  harmony_runner.py  tab2chords.py
pyharmonytools/displays/: console_for_guitar_neck.py  console_for_guitar_tab.py  unit_test_report.md  unit_test_report.py
pyharmonytools/guitar_neck/: fingering.py  neck.py
pyharmonytools/guitar_tab/: chord_and_fingering.py  guitar_tab.py  note_fret_caret.py  string_and_cell.py
pyharmonytools/harmony/: Chords from circles of 5th.ly  cadence.py  circle_of_5th.py  cof_chord.py  degree.py  note.py
pyharmonytools/song/: song.py  text_song.py  ultimate_guitar_capture.py  ultimate_guitar_search.py  ultimate_guitar_song.py
src/: Cm - possible_fingerings.txt  Cmaj7 - possible_fingerings.txt  chord_sequence_search.py  generate_possible_chords.py  harmony_runner.py  search_cadence.py  song1.txt
src/displays/: console.py  console_for_guitar_neck.py
src/guitar_neck/: fingering.py  neck.py  neck_exception.py
src/guitar_tab/: guitar_tab.py
src/harmony/: circle_of_5th.py  cof_chord.py  degree.py  harmony_tools.py  note.py
src/output/: console.py  console_for_guitar_neck.py
src/song/: song.py  text_song.py  ultimate_guitar_search.py  ultimate_guitar_song.py
test/: test_circle_of_5th.py  test_console_for_guitar_neck.py  test_fingering.py  test_harmony_tools.py  test_neck.py  test_note.py  test_song.py  test_text_song.py  test_ug_song.py  test_ultimate_guitar_search.py
test/04-load_tests/: test_search_cadence.py
test/0_mocked/: test_circle_of_5th.py  test_degree.py  test_fingering.py  test_harmony_tools.py  test_text_song.py
test/0_mocked_tests/: test_guitar_tab.py  test_guitar_tab_mocked.py  test_note.py
test/1_objects_tests/: test_cadence.py  test_circle_of_5th.py  test_cof_chord.py  test_console_for_guitar_neck.py  test_degree.py  test_fingering.py  test_guitar_tab.py  test_harmony_tools.py  test_neck.py  test_note.py  test_text_song.py
test/2_file_system_based_tests/: no_tab_tags-progression_song.html  song_01.html  song_02.html  song_03.html  test_ug_song.py  (+1 more)
(+19 files in other folders)
