# setup.cfg file at the root directory[metadata]

[metadata]
name = pyHarmonyTooling
author = Christophe Moustier
url = https://github.com/Moustov/pyharmonytooling
version = 0.1.1
description = Series of tools to handle harmony in music
long_description = Tools on notes, chords, harmony, guitar neck
keywords = music, guitar, chords, circle of 5th
license = BSD 3-Clause License
python_requires = >=3.9, <4
classifiers =
    Programming Language :: Python :: 3

[bdist_wheel]
python-tag=py39

[options]
packages = find_namespace:
package_dir=
    displays = displays
    guitar_neck = guitar_neck
    guitar_tab = guitar_tab
    harmony = harmony
    song = song
zip_safe = False
include_package_data = True
install_requires =
    pychord >= 1.1.0
    deepdiff >= 6.2.1
    Google-Search-API >= 1.1.14

[options.package_data]
* = *.txt, *.rst


[options.packages.find]
where=.
exclude =
    venv*
    build*
